<resources>

    <string name="app_name">Ejemplo Vistas 2</string>
    <string name="idioma">English Portugues Mas</string>
    <string name="telf">Correo electronico o telefono</string>
    <string name="pass">Contrasenia</string>
    <string name="olv">Olvidaste tu contrasenia?</string>
    <string name="email">Email</string>
    <string name="number">Mobile Number</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="desc">By signing up you confirm that you have read &amp; agree to the our</string>
    <string name="crea"><u>CREAR CUENTA DE FACEBOOK</u></string>
    <string name="and"> \r and \r </string>
    <string name="conditions"><u>Terms &amp; Conditions</u></string>
</resources>
